--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	:root{
 		--bgcolor:#beb8ac;
 		--blue:#2fb7fe;
-		--black:#3D3F42;
+		--black:beige;
 		--white:#f4f7ff;
 		--gray:#d8dce4;
 		--lightgray:#8e9095;
@@ -69,7 +69,7 @@
 	.blue-box{
 		width: 157px;
 		height: 207px;
-		background: var(--blue);
+		/* background: var(--blue); */
 		margin-left: -100px;
 		transform: translate(48deg);
 		margin-top:-178px;
@@ -91,7 +91,7 @@
 </style>
 <style type="text/css">
 	.name{
-		color: var(--gray);
+		color: var(--blue);
 		text-align: center;
 		margin-top: -34px;
 		font-size: 30px;
@@ -109,9 +109,9 @@
 		margin: 0 auto;
 		text-align: center;
 		padding: 7px;
-		border-bottom: 1px solid var(--gray);
-		border-top: 1px solid var(--gray);
-		color: var(--gray);
+		border-bottom: 1px solid var(--blue);
+		border-top: 1px solid var(--blue);
+		color: var(--blue);
 		margin-top: 11px;
 		text-transform: uppercase;
 
@@ -128,9 +128,9 @@
 		margin: 0 auto;
 		text-align: center;
 		padding: 2px;
-		border-bottom: 1px solid var(--gray);
-		border-top: 1px solid var(--gray);
-		color: var(--gray);
+		border-bottom: 1px solid var(--blue);
+		border-top: 1px solid var(--blue);
+		color: var(--blue);
 		margin-top: 11px;
 		text-transform: uppercase;	
 		font-size: 18px;
@@ -140,40 +140,39 @@
 <div class="resume-box">
 	<div class="left-section">
 		<div class="profile">
-			<img src="https://i.pinimg.com/236x/7f/c0/60/7fc06000a02960f69b1607c9b2a74c3f.jpg" width="250px" height="250px">
+			<img src="https://i.pinimg.com/564x/ce/fd/80/cefd80f638283de77ba2d08fdcdc7382.jpg" width="250px" height="250px">
 			<div class="blue-box"></div>
 		</div><br>
-		<h2 class="name">Nguyễn <br><span>Thu Phương </h2>
+		<h2 class="name">Lê <br><span>Mai Linh </h2>
 			<p class="n-p">Graphic & Web designer</p>
 			<div class="info">
 				<p class="heading">Info</p>
-				<p class="p1"><span class="span1"><imghttps://cafebiz.cafebizcdn.vn/162123310254002176/2022/5/27/vietnam-anime-4-16536193074662125557755.jpg></span> Địa chỉ <span><br>....</span></p>
-					<p class="p1"><strong>Số điện thoại</strong><span><br>0869912073</span></p>
-					<p class="p1"><strong>Email</strong><span><br>phuongnguyenthu530@gamil.com</span></p>
-					<p class="p1"><strong>Website</strong><span><br>www.FuongFuong.com</span></p>
+				<p class="p1"><span class="span1"><imghttps://cafebiz.cafebizcdn.vn/162123310254002176/2022/5/27/vietnam-anime-4-16536193074662125557755.jpg></span><strong>Địa chỉ</strong><span><br>Tam Hiệp Thanh Trì Hà Nội</span></p>
+					<p class="p1"><strong>Số điện thoại</strong><span><br>0395431326</span></p>
+					<p class="p1"><strong>Email</strong><span><br>lemailinh092003@gmail.com</span></p>
+					<p class="p1"><strong>Website</strong><span><br>www.MaiLinh.com</span></p>
 			</div>
 			<div class="info"></div>
 			<p class="heading">Social</p>
-			<p class="p1">Facebook<span><br>facebook.FuongFuong.com</span>
+			<p class="p1">Facebook<span><br>facebook.MaiLinh.com</span>
 	</div>
 	<div class="right-section">
 		<div class="right-heading">
 			<h1 class="p2"><strong>TRÌNH ĐỘ HỌC VẤN </strong></h1>
-		    <p><b>TRƯỜNG THPT THUẬN THÀNH SỐ 2</b></p><br>
+		    <p><b>TRƯỜNG THPT Ngô Thì Nhậm</b></p><br>
 			<p><b>ĐẠI HỌC MỎ ĐỊA CHẤT</b> </p>
 	</div>
-	<p class="p3">..........................</p>
+	<p class="p3"></p>
 	<div class="right-section">
 	<div class="right-heading">
 			<h1 class=p2><strong>Kinh Nghiệm làm việc  </strong></h1>
 		</div>
 		<p> 2020 - 2023</p><br>
 
-<p>**Trưởng nhóm thiết kế trang web UI / UX cho một công ty thiết kế cường độ nhanh. Đã tạo trung bình 4 trang web nhỏ hoặc 1 trang web chính mỗi tháng.<br></p>
-<p>**Đã tạo bộ đồ họa tùy chỉnh cho khách hàng, với điểm số hài lòng của khách hàng là 99%.<br></p>
-<p>**Xử lý tất cả các thành phần, màu sắc, hình minh họa, kiểu chữ và thương hiệu cho các dự án của khách hàng.<br></p>
-<p>**Hoàn thành các dự án nhanh hơn trung bình 5% so với mục tiêu.<br></p>
-<p>**Đã chuyển đổi hơn 100 trang web cũ sang thiết kế. Tăng điểm UX lên 35%.</p>
+<p>Theo đuổi đam mê thiết kế web với các khóa học cốt lõi về UI / UX<br></p>
+<p>Đã hoàn thành Dự án Capstone trong việc tạo đồ họa tùy chỉnh.<br></p>
+<p>Đã viết một chuyên mục hàng tuần phổ biến về những cách thiết kế web tệ cho bài báo dành cho sinh viên..<br></p>
+
 	<div class="clearfix"></div>
 </div>
 
